# ReachGate

./: .gitignore  .gitlab-ci.yml  PROJECT.md  README.md  SCRIPT.md  pyproject.toml  reachgate.yml
.gitlab/duo/: mcp.json
agent/: system_prompt.md
docs/: DEVPOST.md  JUDGE_REPLAY.md  VERIFICATION.md  VERIFICATION_FASE2.md
docs/examples/: unknown-finding.json
docs/proof/: mr2-reachgate-receipts.json  mr3-reachgate-receipts-rerun.json  unknown-reachgate-receipt.json
examples/demo-app/: .gitlab-ci.yml  README.md  app.py  reachgate.yml
examples/demo-app/routes/: orders.py
examples/demo-app/scripts/legacy/: migrate.py
examples/demo-app/services/: parser.py
examples/demo-app/utils/: config_loader.py
skills/reachgate/: SKILL.md
src/reachgate/: __init__.py  actions.py  agent.py  certificate.py  config.py  findings.py  graph_walker.py  orbit_client.py  path_strategy.py  policy_engine.py
tests/: test_actions_handle.py  test_actions_idempotency.py  test_agent.py  test_artifact.py  test_certificate.py  test_config.py  test_diff_receipts.py  test_findings.py  test_graph_walker.py  test_mr_triage.py  test_orbit_client.py  test_path_strategy.py  test_policy_engine.py  test_reachgate_doctor.py  test_receipt.py  test_search_outcome.py  test_unknown_verdict.py
tests/fixtures/: finding_reachable.json  finding_unreachable.json  orbit_neighbors_response.json  orbit_vuln_response.json
tools/: demo_e2e.py  diff_receipts.py  hunt_demo_target.py  mr_triage.py  preflight_bounds.py  reachgate_doctor.py  smoke_client.py  test_actions.py  verify_proof.py
